{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 132,
  "lineage": "85319827-bef7-e5ee-bfaa-491815ed2c39",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testnet_voteaire_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:internet-gateway/igw-0e409c96904fc46d5",
            "id": "igw-0e409c96904fc46d5",
            "owner_id": "044223142297",
            "tags": {
              "Name": "testnet_voteaire"
            },
            "tags_all": {
              "Name": "testnet_voteaire"
            },
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "testnet_voteaire_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:loadbalancer/app/testnet-voteaire-lb/37fcc281550587eb",
            "arn_suffix": "app/testnet-voteaire-lb/37fcc281550587eb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "testnet-voteaire-lb-991147620.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:loadbalancer/app/testnet-voteaire-lb/37fcc281550587eb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "testnet-voteaire-lb",
            "security_groups": [
              "sg-06d3d2f3ee1f90066"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07d60e56136e9aa76"
              },
              {
                "subnet_id": "subnet-0ee1e04881596a97b"
              }
            ],
            "subnets": [
              "subnet-07d60e56136e9aa76",
              "subnet-0ee1e04881596a97b"
            ],
            "vpc_id": "vpc-0528d4fa1fa25ebe8",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.public-a",
            "aws_subnet.public-b",
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "voteaire_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:listener/app/testnet-voteaire-lb/37fcc281550587eb/96847ebc44ebc482",
            "certificate_arn": "arn:aws:acm:ca-central-1:044223142297:certificate/90b75eed-405b-4287-a8e6-f4c875a40aa1",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:targetgroup/testnet-voteaire-api-tg-1/763f10a9ad9876ab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:listener/app/testnet-voteaire-lb/37fcc281550587eb/96847ebc44ebc482",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:loadbalancer/app/testnet-voteaire-lb/37fcc281550587eb",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.testnet_voteaire_lb",
            "aws_lb_target_group.testnet_voteaire_api_tg_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "voteaire_lb_listener_container",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:listener/app/testnet-voteaire-lb/37fcc281550587eb/06f03b5a0b1f0643",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:targetgroup/testnet-voteaire-api-tg-2/d0e92874580562cf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:listener/app/testnet-voteaire-lb/37fcc281550587eb/06f03b5a0b1f0643",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:loadbalancer/app/testnet-voteaire-lb/37fcc281550587eb",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.testnet_voteaire_lb",
            "aws_lb_target_group.testnet_voteaire_api_tg_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testnet_voteaire_api_tg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:targetgroup/testnet-voteaire-api-tg-1/763f10a9ad9876ab",
            "arn_suffix": "targetgroup/testnet-voteaire-api-tg-1/763f10a9ad9876ab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:targetgroup/testnet-voteaire-api-tg-1/763f10a9ad9876ab",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "testnet-voteaire-api-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "testnet_voteaire_api_tg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:targetgroup/testnet-voteaire-api-tg-2/d0e92874580562cf",
            "arn_suffix": "targetgroup/testnet-voteaire-api-tg-2/d0e92874580562cf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:044223142297:targetgroup/testnet-voteaire-api-tg-2/d0e92874580562cf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "testnet-voteaire-api-tg-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:security-group/sg-06d3d2f3ee1f90066",
            "description": "sec group for api load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d3d2f3ee1f90066",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "voteaire-api-lb-sg",
            "name_prefix": "",
            "owner_id": "044223142297",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "voteaire_api_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:security-group/sg-0fb8db90c4682f845",
            "description": "Security group for voteaire api ecs service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb8db90c4682f845",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "voteaire-api-ecs-sg",
            "name_prefix": "",
            "owner_id": "044223142297",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:security-group/sg-0cd1d13b448b13fcd",
            "description": "Security group for workers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd1d13b448b13fcd",
            "ingress": [],
            "name": "worker-sg",
            "name_prefix": "",
            "owner_id": "044223142297",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:subnet/subnet-032c654699dda1781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.110.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032c654699dda1781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044223142297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-private-ca-central-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-private-ca-central-1a"
            },
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:subnet/subnet-06db9a8acf8d3f6b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.110.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06db9a8acf8d3f6b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044223142297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-private-ca-central-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-private-ca-central-1b"
            },
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:subnet/subnet-0911df1f15fc45c91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.110.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911df1f15fc45c91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "044223142297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-private-ca-central-1d"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-private-ca-central-1d"
            },
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:subnet/subnet-07d60e56136e9aa76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.110.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d60e56136e9aa76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044223142297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-public-ca-central-1a"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-public-ca-central-1a"
            },
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:subnet/subnet-0ee1e04881596a97b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.110.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee1e04881596a97b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044223142297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-public-ca-central-1b"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-public-ca-central-1b"
            },
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:subnet/subnet-025e5a79b44c4d238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1d",
            "availability_zone_id": "cac1-az4",
            "cidr_block": "10.110.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025e5a79b44c4d238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "044223142297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-public-ca-central-1d"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc-public-ca-central-1d"
            },
            "vpc_id": "vpc-0528d4fa1fa25ebe8"
          },
          "dependencies": [
            "aws_vpc.testnet_voteaire_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testnet_voteaire_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:044223142297:vpc/vpc-0528d4fa1fa25ebe8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.110.0.0/18",
            "default_network_acl_id": "acl-048e1b6f50ef7d781",
            "default_route_table_id": "rtb-08a19618b03c766ca",
            "default_security_group_id": "sg-06b98f893cd6ee7c2",
            "dhcp_options_id": "dopt-02fc511c65291d68f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0528d4fa1fa25ebe8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a19618b03c766ca",
            "owner_id": "044223142297",
            "tags": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "testnet-voteaire-vpc"
            }
          }
        }
      ]
    }
  ]
}